# clusterflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  transmission_cluster_tool_plan.md
.github/workflows/: ci.yml  docs.yml  release.yml
clusterflow/: __init__.py  cli.py  config.py  models.py  pipeline.py
clusterflow/analysis/: __init__.py  bootstrap.py  centrality.py  dag.py
clusterflow/clustering/: __init__.py  consensus.py  leiden.py  runner.py  snp_chains.py  spectral.py
clusterflow/distance/: __init__.py  backend.py  cache.py  cpu.py  gpu.py  pairsnp.py
clusterflow/graph/: __init__.py  constructor.py  io.py
clusterflow/ingestion/: __init__.py  epi.py  mlst.py  snp_matrix.py
clusterflow/streaming/: __init__.py  alerts.py  api.py  incremental.py
clusterflow/testing/: __init__.py  benchmark.py  simulate.py
clusterflow/viz/: __init__.py  comparison.py  dashboard.py  heatmap.py  mst.py  terrain.py  timeline.py
clusterflow/web/: __init__.py  report.py  streamlit_app.py
configs/: example.yaml
docs/: algorithms.md  api_reference.md  config_reference.md  data_formats.md  index.md  installation.md  quickstart.md  snp2cluster_migration.md  streaming.md  validation.md  web.md
notebooks/: validation_kpneumoniae.ipynb
tests/: conftest.py  test_analysis.py  test_clustering.py  test_config.py  test_distance.py  test_graph.py  test_ingestion.py  test_models.py  test_pipeline.py  test_streaming.py  test_validation.py  test_web.py
tests/fixtures/: kp_config.yaml  kp_epi.csv  kp_mlst.csv  kp_snp_matrix.tsv  kp_truth.csv
tests/fixtures/kp_real/: epi.csv  kp_config.yaml  mlst.csv  snp_matrix.csv
